<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:lzy="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.wlm.wlm.ui.CustomTitleBar
        android:id="@+id/titlebar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        lzy:img_left="@mipmap/ic_back"
        lzy:text_title="@string/my_nickname"
        lzy:title_color="@color/white">
    </com.wlm.wlm.ui.CustomTitleBar>

    <EditText
        android:id="@+id/et_nick"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/input_nickname"
        android:layout_marginTop="@dimen/margin_24"
        android:layout_marginLeft="@dimen/margin_15"
        android:background="@null"/>

    <TextView
        android:id="@+id/recommend_commit"
        android:layout_width="fill_parent"
        android:layout_height="40.0dip"
        android:layout_marginTop="40.0dip"
        android:layout_marginLeft="@dimen/margin_15"
        android:layout_marginRight="@dimen/margin_15"
        android:background="@drawable/text_selector_commit"
        android:gravity="center"
        android:text="@string/nickname_save"
        android:textColor="@color/white"
        android:textSize="@dimen/textsize18" />

</LinearLayout>
