<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:lzy="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/ic_login_bg"
    android:orientation="vertical">

    <com.wlm.wlm.ui.CustomTitleBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        lzy:text_title="@string/login"
        lzy:title_color="@color/transparent"
        ></com.wlm.wlm.ui.CustomTitleBar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="60dp"
        android:layout_marginLeft="@dimen/margin_30"
        android:layout_marginRight="@dimen/margin_30">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center_vertical"
            android:gravity="center"
            android:layout_marginBottom="@dimen/margin_10">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/login_text"
                android:textSize="@dimen/textsize18"
                android:text="@string/login_account"/>

            <EditText
                android:id="@+id/et_login_input_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:layout_marginLeft="@dimen/margin_10"
                android:textColorHint="@color/register_text_hint_bg"
                android:hint="@string/login_input_phone"/>


        </LinearLayout>

        <View
            android:id="@+id/line_phone"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/line_bg"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/margin_30"
            android:layout_marginBottom="@dimen/margin_10">

            <TextView
                android:id="@+id/ic_vcode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:textColor="@color/login_text"
                android:textSize="@dimen/textsize18"
                android:text="@string/login_psw"/>

            <TextView
                android:id="@+id/tv_login_send_psw"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:textColor="@color/register_vcode_bg"
                android:text="@string/login_forget_psw"/>

            <EditText
                android:id="@+id/et_login_input_psd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:layout_marginLeft="@dimen/margin_10"
                android:layout_toRightOf="@+id/ic_vcode"
                android:layout_toLeftOf="@+id/tv_login_send_psw"
                android:layout_centerVertical="true"
                android:inputType="textPassword"
                android:textColorHint="@color/register_text_hint_bg"
                android:hint="@string/login_input_psw"/>


        </RelativeLayout>

        <View
            android:id="@+id/line_psd"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/line_bg"/>

        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textColor="@color/white"
            android:background="@drawable/login_btn_click"
            android:textSize="@dimen/btn_register_text_size"
            android:layout_marginTop="@dimen/margin_50"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_horizontal"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/margin_15">

            <TextView
                android:id="@+id/tv_login_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:text="@string/login_register"
                android:textColor="@color/register_vcode_bg"/>

        </LinearLayout>
    </LinearLayout>


</LinearLayout>
