<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="@dimen/margin_28"
        android:layout_marginRight="@dimen/margin_28">

        <LinearLayout
            android:id="@+id/ll_input_phone"
            android:layout_width="match_parent"
            android:layout_height="49dp"
            android:orientation="horizontal"
            android:layout_gravity="center_vertical"
            android:gravity="center_vertical"
            android:background="@drawable/shape_register_edit"
            android:layout_marginBottom="@dimen/margin_10">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_13"
                android:src="@mipmap/ic_register_head"/>

            <EditText
                android:id="@+id/et_input_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:layout_marginLeft="@dimen/margin_10"
                android:textColorHint="@color/register_text_hint_bg"
                android:hint="@string/register_input_phone"/>

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="49dp"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/margin_15"
            android:background="@drawable/shape_register_edit"
            android:layout_marginBottom="@dimen/margin_10">

            <ImageView
                android:id="@+id/ic_vcode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/margin_13"
                android:src="@mipmap/ic_register_vc"/>

            <TextView
                android:id="@+id/tv_send_vcode"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentRight="true"
                android:layout_marginRight="@dimen/margin_3"
                android:layout_centerVertical="true"
                android:textSize="@dimen/textsize18"
                android:layout_marginTop="@dimen/margin_3"
                android:layout_marginBottom="@dimen/margin_3"
                android:textColor="@color/white"
                android:gravity="center"
                android:paddingLeft="@dimen/padding_10"
                android:background="@drawable/shape_register_edit"
                android:text="@string/register_send_vcoed"/>

            <EditText
                android:id="@+id/et_input_vcode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:layout_marginLeft="@dimen/margin_10"
                android:layout_toRightOf="@+id/ic_vcode"
                android:layout_toLeftOf="@+id/tv_send_vcode"
                android:layout_centerVertical="true"
                android:inputType="number"
                android:textColorHint="@color/register_text_hint_bg"
                android:hint="@string/register_input_vcode"/>


        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="49dp"
            android:orientation="horizontal"
            android:layout_gravity="center_vertical"
            android:gravity="center"
            android:layout_marginTop="@dimen/margin_15"
            android:background="@drawable/shape_register_edit"
            android:layout_marginBottom="@dimen/margin_10">

            <ImageView
                android:id="@+id/iv_input_invitation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/margin_13"
                android:src="@mipmap/ic_register_invitation"/>

            <EditText
                android:id="@+id/et_input_invitation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:layout_marginLeft="@dimen/margin_10"
                android:layout_toRightOf="@+id/iv_input_invitation"
                android:inputType="textPassword"
                android:layout_centerVertical="true"
                android:textColorHint="@color/register_text_hint_bg"
                android:hint="@string/register_input_invitation"/>

        </RelativeLayout>


        <Button
            android:id="@+id/btn_over"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:text="@string/register"
            android:textColor="@color/white"
            android:background="@drawable/shape_register_btn"
            android:textSize="@dimen/btn_register_text_size"
            android:layout_marginTop="@dimen/margin_50"/>

        <LinearLayout
            android:id="@+id/ll_protocol"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/margin_15">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register_tip"
                android:textSize="@dimen/textsize12"
                android:textColor="@color/login_title_text"
                android:layout_marginLeft="@dimen/margin_10"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register_protocol"
                android:textSize="@dimen/textsize12"
                android:textColor="@color/setting_title_color"/>

        </LinearLayout>

    </LinearLayout>
</LinearLayout>
